Delete .scribe
